--- a/GenerativeArtBlogPost.html
+++ b/GenerativeArtBlogPost.html
@@ -1,1 +1,22 @@
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Blog Post: Eyes Only, the Installation</title>
+  </head>
+  <body>
+    <h1>The Artistic Origin</h1>
+    <p>This Valentine's Day, I was tasked with contributing to a Valentine's Day installation at Barnard College. 
+      Each artist was asked to program an Arduino ESP32 board.
+      We displayed our ESP32s in hanging envelopes for students in the Computer Science lounge to see on Valentine's day. </p>
 
+    <p>My artistic vision was strongly shaped by the Valentine's Day installation date.
+    I wanted viewers to connect with my piece through the cultural lens of Valentine's Day. 
+    The installation itself was destined to be displayed in a hanging envelope, which fit well with the Valentine's Day theme. 
+    I leaned into this exterior design element to create a cohesive exterior-interior viewing experience;
+    as the viewer approaches the physical letter encasing my ESP32 display, their expectations are fulfilled when the ESP32 presents them with the text of a letter.
+    But, on a day about celebrating love, I wanted to emphasize an alternative perspective...sending letters as a way of conveying love lost. 
+    </p>
+
+    <p></p>
+  </body>
+</html>
