--- a/index.html
+++ b/index.html
@@ -4,7 +4,15 @@
     <title>My GitHub Pages Site</title>
   </head>
   <body>
-    <h1>Hello world!</h1>
-    <p>Welcome to my GitHub Pages site!</p>
+    <h1>Blog</h1>
+    <p>
+      Click <a href="https://github.com/olivia-bobrownicki/Eyes-Only">here</a> to view my Blog, 
+      which features the creative documentation for all my Creative Embedded Systems installations.
+    </p>
+    
+    <h1>Generative Art</h1>
+    <p>
+      Click <a href="https://github.com/olivia-bobrownicki/Eyes-Only">here</a> to view the GitHub repo for the "Eyes Only" Valentine's Day art installation.
+    </p>
   </body>
 </html>
