--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <body>
     <h1>Blog</h1>
     <p>
-      Click <a href="https://github.com/olivia-bobrownicki/Eyes-Only">here</a> to view my Blog, 
+      Click <a href="https://sticky-output-0e7.notion.site/Creative-Embedded-Systems-4e2fbc2a42464a11849eb1d6c295cb5a?pvs=4>here</a> to view my Blog, 
       which features the creative documentation for all my Creative Embedded Systems installations.
     </p>
     
