--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
   <body>
     <h1>Module One: Generative Art</h1>
     <p>
-      Click <a href="https://sticky-output-0e7.notion.site/Creative-Embedded-Systems-4e2fbc2a42464a11849eb1d6c295cb5a?pvs=4">here</a> to view my Blog, 
+      Click <a href="https://sticky-output-0e7.notion.site/Creative-Embedded-Systems-4e2fbc2a42464a11849eb1d6c295cb5a?pvs=4">here</a> to view my blog, 
       which features the creative documentation for all my Creative Embedded Systems installations.
-      
+      <br>
       Click <a href="https://github.com/olivia-bobrownicki/Eyes-Only">here</a> to view the GitHub repo and technical documentation for the "Eyes Only" Valentine's Day art installation.
     </p>
   </body>
