--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <title>My GitHub Pages Site</title>
   </head>
   <body>
-    <h1>Module One: Generative Art</h1>
+    <h1>Olivia Bobrownicki's Creative Embedded Systems Work</h1>
+    
+    <h2>Module One: Generative Art</h2>
     <p>
       Click <a href="https://sticky-output-0e7.notion.site/Creative-Embedded-Systems-4e2fbc2a42464a11849eb1d6c295cb5a?pvs=4">here</a> to view my blog, 
       which features the creative documentation for all my Creative Embedded Systems installations.
